добавил файлы под все страницы и прописал для них урлы

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -6527,6 +6527,12 @@ div#loading img {
 .brand-logo img {
   max-height: 30px;
 }
+
+.brand-logo-width {
+  max-width: 70px;
+  max-height: auto;
+}
+
 .brand-logo .logo-dark {
   display: none;
 }
