--- a/templates/home.html
+++ b/templates/home.html
@@ -53,25 +53,77 @@
     <div class="brand-section">
       <div class="container">
         <div class="brands-wrapper-inner">
-          <div class="brand-heading">
-            <h3 class="brand-heading__title">Более 100 компаний выбрали правильных интеграторов</h3>
-          </div>
-          <div class="brands-wrapper ">
-            <div class="single-brand" data-aos-duration="1000" data-aos="fade-left" data-aos-delay="800">
-              <img src="./image/home/brand-1.png" alt="brand-logo">
+
+
+
+          <div class="slidercontainer h-100">
+            <div class="row align-items-center h-100">
+              <div class="slidercontainer rounded">
+                <div class="brand-heading">
+                  <h3 class="brand-heading__title">Более 100 компаний выбрали правильных интеграторов</h3>
+                </div>
+                <div class="slider">
+                  <div class="logos  brands-wrapper ">
+                    <div class="single-brand fab" data-aos-duration="1000" data-aos="fade-left" data-aos-delay="800">
+                      <img class="icon-brand" src={% static '/image/home/1.png'%} alt="brand-logo">
+                    </div>
+                    <div class="single-brand fab" data-aos-duration="1000" data-aos="fade-left" data-aos-delay="800">
+                      <img class="icon-brand" src={% static '/image/home/2.png'%} alt="brand-logo">
+                    </div>
+                    <div class="single-brand fab" data-aos-duration="1000" data-aos="fade-left" data-aos-delay="800">
+                      <img class="icon-brand" src={% static '/image/home/3.png'%} alt="brand-logo">
+                    </div>
+                    <div class="single-brand fab" data-aos-duration="1000" data-aos="fade-left" data-aos-delay="800">
+                      <img class="icon-brand" src={% static '/image/home/4.png'%} alt="brand-logo">
+                    </div>
+                    <div class="single-brand fab" data-aos-duration="1000" data-aos="fade-left" data-aos-delay="800">
+                      <img class="icon-brand" src={% static '/image/home/5.png'%} alt="brand-logo">
+                    </div>
+                    <div class="single-brand fab" data-aos-duration="1000" data-aos="fade-left" data-aos-delay="800">
+                      <img class="icon-brand" src={% static '/image/home/6.png'%} alt="brand-logo">
+                    </div>
+                    <div class="single-brand fab" data-aos-duration="1000" data-aos="fade-left" data-aos-delay="800">
+                      <img class="icon-brand" src={% static '/image/home/7.png'%} alt="brand-logo">
+                    </div>
+                    <div class="single-brand fab" data-aos-duration="1000" data-aos="fade-left" data-aos-delay="800">
+                      <img class="icon-brand" src={% static '/image/home/8.png'%} alt="brand-logo">
+                    </div>
+                    <!-- <div class="single-brand fab" data-aos-duration="1000" data-aos="fade-left" data-aos-delay="800">
+                      <img class="icon-brand" src={% static '/image/home/9.png'%} alt="brand-logo">
+                    </div> -->
+                    <div class="single-brand fab" data-aos-duration="1000" data-aos="fade-left" data-aos-delay="800">
+                      <img class="icon-brand" src={% static '/image/home/10.png'%} alt="brand-logo">
+                    </div>
+                    <div class="single-brand fab" data-aos-duration="1000" data-aos="fade-left" data-aos-delay="800">
+                      <img class="icon-brand" src={% static '/image/home/11.png'%} alt="brand-logo">
+                    </div>
+                    <div class="single-brand fab" data-aos-duration="1000" data-aos="fade-left" data-aos-delay="800">
+                      <img class="icon-brand" src={% static '/image/home/12.png'%} alt="brand-logo">
+                    </div>
+                    <div class="single-brand fab" data-aos-duration="1000" data-aos="fade-left" data-aos-delay="800">
+                      <img class="icon-brand" src={% static '/image/home/13.png'%} alt="brand-logo">
+                    </div>
+                    <div class="single-brand fab" data-aos-duration="1000" data-aos="fade-left" data-aos-delay="800">
+                      <img class="icon-brand" src={% static '/image/home/14.png'%} alt="brand-logo">
+                    </div>
+                    <div class="single-brand fab" data-aos-duration="1000" data-aos="fade-left" data-aos-delay="800">
+                      <img class="icon-brand" src={% static '/image/home/15.png'%} alt="brand-logo">
+                    </div>
+                    <div class="single-brand fab" data-aos-duration="1000" data-aos="fade-left" data-aos-delay="800">
+                      <img class="icon-brand" src={% static '/image/home/16.png'%} alt="brand-logo">
+                    </div>
+                    <div class="single-brand fab" data-aos-duration="1000" data-aos="fade-left" data-aos-delay="800">
+                      <img class="icon-brand" src={% static '/image/home/17.png'%} alt="brand-logo">
+                    </div>
+                    <div class="single-brand fab" data-aos-duration="1000" data-aos="fade-left" data-aos-delay="800">
+                      <img class="icon-brand" src={% static '/image/home/18.png'%} alt="brand-logo">
+                    </div>
+                  </div>
+
+                </div>
+              </div>
             </div>
-            <div class="single-brand" data-aos-duration="1000" data-aos="fade-left" data-aos-delay="700">
-              <img src="./image/home/brand-2.png" alt="brand-logo">
-            </div>
-            <div class="single-brand" data-aos-duration="1000" data-aos="fade-left" data-aos-delay="600">
-              <img src="./image/home/brand-3.png" alt="brand-logo">
-            </div>
-            <div class="single-brand" data-aos-duration="1000" data-aos="fade-left" data-aos-delay="500">
-              <img src="./image/home/brand-4.png" alt="brand-logo">
-            </div>
-            <div class="single-brand" data-aos-duration="1000" data-aos="fade-left" data-aos-delay="400">
-              <img src="./image/home/brand-5.png" alt="brand-logo">
-            </div>
+          
           </div>
         </div>
       </div>
@@ -125,8 +177,8 @@
                   <img src="{% static '/image/icons/icon-service-3.svg' %}" alt="image alt" class="inline-svg">
                 </div>
                 <div class="service-card__body">
-                  <h3 class="service-card__title">Поддержка и Сопровождение битрикс24</h3>
-                  <p>Непрерывная поддержка вашей компании в использовании CRM, включающая консультации и помощь в поиске решения задач/проблем, донастройка Битрикс24, обучение.</p>
+                  <h3 class="service-card__title">Поддержка и Сопровождение</h3>
+                  <p>Непрерывная поддержка вашей компании в использовании CRM, включающая консультации и помощь в поиске решения, донастройка Битрикс24, обучение.</p>
                   <span class="service-card__link btn-link btn-arrow">Find out more</span>
                 </div>
               </a>
@@ -293,7 +345,7 @@
         <div class="row justify-content-center">
           <div class="col-xxl-6 col-xl-7 col-lg-8 col-md-9">
             <div class="section-heading text-center">
-              <h2 class="section-heading__title heading-md text-black">Most of our satisfied clients leave their feedback</h2>
+              <h2 class="section-heading__title heading-md text-black">Добавьте свой портал к правильно настроеным, а процессы к понятным</h2>
             </div>
           </div>
         </div>
@@ -301,7 +353,7 @@
           <div class="row row--custom ">
             <div class="col-lg-6 col-md-8 col-sm-10 col-xs-10" data-aos-duration="1000" data-aos="fade-right">
               <div class="testimonial-widget-large__image">
-                <img src="{% static '/image/home-1/testimonial-image.png' %}" alt="handsome-smiling-bearded-man-glasses-working-laptop">
+                <img src="{% static '/image/1R1A0289.jpg' %}" alt="handsome-smiling-bearded-man-glasses-working-laptop">
               </div>
             </div>
             <div class=" col-lg-6 col-md-10 col-auto" data-aos-duration="1000" data-aos="fade-left">
@@ -310,18 +362,19 @@
                   <img src="{% static '/image/home-1/testimonial-icon.svg' %}" alt="testimonial icon">
                 </div>
                 <p class="testimonial-widget-large__review-text">
-                  Это профессионалы с богатым опытом в маркетинге, продажах и автоматизации бизнес-процессов.  Мы не просто интегрируем CRM Битрикс24, а проводим глубокий бизнес-анализ, вникаем в каждый процесс и создаем решения, которые максимизируют эффективность вашего бизнеса.
+                 
 
 Мы не останавливаемся на внедрении Битрикс24. Мы обучаем ваших сотрудников и сопровождаем вас на протяжении многих лет, чтобы вы максимально использовали возможности этой CRM. Мы выстраиваем партнерские отношения и помогаем вам достичь долгосрочных целей.
-                </p>
-                <h4 class="testimonial-widget-large__user-name">
+                </p> <p> Правльные интегратора это профессионалы с богатым опытом в маркетинге, продажах и автоматизации бизнес-процессов.  Мы не просто интегрируем CRM Битрикс24, а проводим глубокий бизнес-анализ, вникаем в каждый процесс и создаем решения, которые максимизируют эффективность вашего бизнеса.</p>
+                
+                <h4 class="testimonial-widget-large__user-name mt-10">
                   Роман Сытько
                 </h4>
                 <span class="testimonial-widget-large__user-position">
                   CEO Правильные Интеграторы
                   </span>
                 <div class="testimonial-widget-large__link">
-                  <a href="#" class="btn-link btn-arrow">Read more reviews</a>
+                  <a href="#" class="btn-link btn-arrow">Подробнее</a>
                 </div>
               </div>
             </div>
