--- a/templates/base.html
+++ b/templates/base.html
@@ -32,6 +32,13 @@
     @import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap');
     @import url('https://fonts.cdnfonts.com/css/clash-display');
   </style>
+
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Geologica:wght@100..900&display=swap" rel="stylesheet">
+
+
 </head>
 
 <body>
