добавил страницы отзывов и кейсов (черновики)

--- a/templates/home.html
+++ b/templates/home.html
@@ -307,12 +307,12 @@
               </div>
               <div class="portfolio-widget__title-block">
                 <h3 class="portfolio-widget__title">
-                  App — The power of communication
+                  Автоматизация воронки продаж в Битрикс24 для компании «РесайклПро»
                 </h3>
-                <span class="portfolio-widget__category">UI/UX Design</span>
+                <span class="portfolio-widget__category">Комплексное внедрение</span>
               </div>
               <div class="portfolio-widget__link">
-                <span  class="btn-link btn-arrow">View work
+                <span  class="btn-link btn-arrow">Подробнее
         </span>
               </div>
             </a>
@@ -324,12 +324,12 @@
               </div>
               <div class="portfolio-widget__title-block">
                 <h3 class="portfolio-widget__title">
-                  Website — The future lifestyle platform.
+                  Продажи, процессы, снабжение, маркетинг. Битрикс24 в компании «МагКомпозит»
                 </h3>
-                <span class="portfolio-widget__category">Branding</span>
+                <span class="portfolio-widget__category">Комплексное внедрение</span>
               </div>
               <div class="portfolio-widget__link">
-                <span  class="btn-link btn-arrow">View work
+                <span  class="btn-link btn-arrow">Подробнее
         </span>
               </div>
             </a>
