--- a/templates/case.html
+++ b/templates/case.html
@@ -30,57 +30,33 @@
       <div class="portfolio-details_thumbnail-block">
         <img class="portfolio-details_thumbnail-image" src={{case.case_image.url}} alt="image alt">
         <div class="portfolio-details_thumbnail-list">
+          {% if case.case_client %}
           <div class="">
-            <h3>Client:</h3>
-            <p>Adam Smith</p>
-          </div>
+            <h3>Клиент:</h3>
+            <p>{{case.case_client}}</p>
+          </div> {% endif %}
+
+          {% if case.category_case.all.0 %}
           <div>
-            <h3>Category:</h3>
+            <h3>Категория:</h3>
             <p>
               {% for cat in case.category_case.all %} {{cat}} {% endfor %}</p>
-          </div>
+          </div> {% endif %}
+
+          {% if case.case_duration %}
           <div>
-            <h3>Duration:</h3>
-            <p>1 Week</p>
-          </div>
-          <div>
-            <h3>Website Link:</h3>
-            <p>example@gmail.com</p>
-          </div>
+            <h3>Сроки:</h3>
+            <p>{{ case.case_duration }}</p>
+          </div> {% endif %}
+          
         </div>
       </div>
       <div class="portfolio-details_article-body">
         <div>
-          <h2>Project overview</h2>
-          <p>
-            Mobile UX design is the design of user experiences for hand-held and wearable devices. Designers create solutions (typically applications) to meet mobile users' unique requirements and restrictions. Designers focus on accessibility, discoverability and efficiency to optimize on-the-go interactive experiences.
-          </p>
-          <p>
-            User Interface (UI) determines how the app will look like, while UX determines what problem it will solve in the users' life. UI is revolves around visually directing the user about the app interface, while UX includes researching, testing, developing the app.
-          </p>
+          <h2>Описание проекта</h2>
+         <p>{{case.case_text|safe }}</p>
         </div>
-        <div>
-          <h3>What we did for this project</h3>
-          <p>A user can engage with a product or service by using a user interface (UI), which is essentially a collection of screens, pages, visual elements (such as buttons and icons). The phrase “User Experience” refers to how a person reacts to each component.</p>
-          <ul class="list">
-            <li>Strategic Discovery</li>
-            <li>Web application redesign and optimization</li>
-            <li>Mobile application redesign and optimization</li>
-            <li>Landing page redesign and optimization</li>
-            <li>Component-based UI-Kit</li>
-            <li>Product design sprints to explore new functionality</li>
-          </ul>
-        </div>
-        <img src="./image/portfolio-details/detail-2.png" alt="image alt">
-        <div>
-          <h2>Project results</h2>
-          <p>
-            The UI/UX design of software and applications helps improve customer experience and satisfaction. This ultimately helps increase the number of people using your product. If users encounter roadblocks when trying to complete actions on your product, they are very likely to drop off.
-          </p>
-          <p>
-            Creating a brand with clear and targeted messaging was crucial in increasing conversions. Together with the Webflow team, we have compiled a new product page structure using the App model and packed that in an excellent cover 🙂
-          </p>
-        </div>
+        
       </div>
     </article>
   </div>
