--- a/templates/payment.html
+++ b/templates/payment.html
@@ -10,8 +10,8 @@
       <div class="inner_banner-content-block">
         <h3 class="inner_banner-title">Сервис E-pos: инструкция по оплате</h3>
         <div class="banner__page-navigator">
-          <img class="erip-logo" src={% static 'image/epos_white_1x.png' %} />
-          <img class="erip-logo" src={% static 'image/erip_logo_rus_1x.png' %} />
+          <img class="erip-logo" src={% static 'image/epos.svg' %} />
+          <img class="erip-logo" src={% static 'image/erip.svg' %} />
         </div>
       </div>
     </div>
